src/test/ui/hygiene/fields-numeric-borrowck.rs
// Copyright 2018 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

struct S(u8);

fn main() {
    let mut s = S(0);
    let borrow1 = &mut s.0;
    let S { 0: ref mut borrow2 } = s;
    //~^ ERROR cannot borrow `s.0` as mutable more than once at a time
    borrow2.use_mut();
    borrow1.use_mut();
}

trait Fake { fn use_mut(&mut self) { } fn use_ref(&self) { }  }
impl<T> Fake for T { }
